<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add"
    android:orientation="vertical">
    <include layout="@layout/toolbar_add"/>
<!--    <TextView-->
<!--        android:id="@+id/tv_add_title"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textAlignment="center"-->
<!--        android:text="@string/add_title_name"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:background="@color/purple_200"-->
<!--        android:textSize="24sp"-->
<!--        android:textColor="@color/white"-->
<!--        tools:ignore="MissingConstraints" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <EditText
            android:id="@+id/et_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/et_add_name_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_add_locate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_add_locate_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_add_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_add_date_name"
            android:inputType="date"
            android:textSize="24sp"
            android:layout_marginTop="20dp"/>
        <Switch
            android:id="@+id/sw_add_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sw_add_date_name"
            android:textColor="@color/purple_200"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/et_add_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/et_add_time_name"
            android:inputType="time"
            android:textSize="24sp" />
        <Switch
            android:id="@+id/sw_add_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sw_add_date_name"
            android:textColor="@color/purple_200"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />



        <TextView
            android:id="@+id/tv_add_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/purple_200"
            android:gravity="center_horizontal"
            android:text="@string/tv_add_submit_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            android:padding="12dp"/>
        <TextView
            android:id="@+id/tv_add_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/purple_200"
            android:gravity="center_horizontal"
            android:text="@string/tv_add_submit_update"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            android:padding="12dp"/>

    </LinearLayout>



</LinearLayout>
</ScrollView>